taccsite_cms/static/site_cms/css/src/_imports/components/django.cms.picture.css
/* To support djangocms-picture plugin unstyled default alignment classes */
/* SEE: https://github.com/django-cms/djangocms-picture/blob/2.3.0/djangocms_picture/models.py#L24-L34 */
@import url("@tacc/core-styles/src/lib/_imports/components/align.css");

/* Allow anchor tag to wrap like a block but still behave inline */
a:has(.img-fluid) {
  display: inline-block;
}

/* Support centering originating from Core-Styles */
/* FAQ: We set display in client, so Core-Styles does not assume display */
/* SEE: https://github.com/TACC/Core-Styles/blob/dd2bbb0/src/lib/_imports/components/align.css#L16-L19 */
img.align-center {
  display: block;
}

/* Try to auto-clear image floats */
/* WARNING: The commented solution clears float BUT also negates float */
/*
.align-right + *:not(img) { clear: right }
.align-left + *:not(img) { clear: left }
*/

